# ChangeLog for dev-ruby/authlogic
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2

*authlogic-3.2.0 (14 Feb 2013)

  14 Feb 2013; Hans de Graaff <graaff@gentoo.org> +authlogic-3.2.0.ebuild:
  Version bump.

  09 Feb 2013; Hans de Graaff <graaff@gentoo.org> authlogic-3.1.0.ebuild,
  authlogic-3.1.3.ebuild:
  Update sqlite3 dependency.

*authlogic-3.1.3 (20 Jul 2012)

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> +authlogic-3.1.3.ebuild:
  Version bump.

  10 Apr 2012; Hans de Graaff <graaff@gentoo.org> authlogic-3.1.0.ebuild:
  Add ruby19. Drop unneeded ruby-debug and x86 due to rails not being keyworded
  yet.

  25 Nov 2011; Hans de Graaff <graaff@gentoo.org> authlogic-3.1.0.ebuild:
  Add x86 keyword.

*authlogic-3.1.0 (31 Oct 2011)

  31 Oct 2011; Hans de Graaff <graaff@gentoo.org> -authlogic-3.0.3.ebuild,
  +authlogic-3.1.0.ebuild:
  Version bump.

*authlogic-3.0.3 (01 Jul 2011)

  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> +authlogic-3.0.3.ebuild:
  Version bump.

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.6.ebuild,
  -authlogic-2.1.6-r1.ebuild:
  Remove old versions.

*authlogic-2.1.6-r2 (14 Feb 2011)

  14 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-2.1.6-r2.ebuild, +files/authlogic-2.1.6-quote-email.patch:
  Quotes are a valid component of the email name. Fixed and submitted
  upstream.

*authlogic-2.1.6-r1 (14 Feb 2011)

  14 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-2.1.6-r1.ebuild, +files/authlogic-2.1.6-rails3-1.patch,
  +files/authlogic-2.1.6-rails3-2.patch:
  Add upstream patches for Rails 3 compatibility.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> authlogic-2.1.6.ebuild:
  Keyword ~x86-macos.

  03 Sep 2010; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.3.ebuild,
  -authlogic-2.1.5.ebuild:
  Remove old versions.

*authlogic-2.1.6 (05 Aug 2010)

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.6.ebuild,
  metadata.xml: