@@ -2,3 +2,4 @@ DIST authlogic-2.1.6.gem 74752 SHA256 af9cc2b76501338ac1cfa43104e80d9eb863e2c1c2
 DIST authlogic-3.1.0.gem 68608 SHA256 9e2545c9b3c529f34d5c595bced3e439338834f67be4e24dc8aa5d631c14f5ee SHA512 8bdb1690387a187f6005730ae275e414e93a468650fa36eb26084b6a7afc742469a5b355cb5d0f544e4a4db98421f1748d80b65ea7b2394e761d57101a075a07 WHIRLPOOL 6c68390f5acc8e89ce0d1551e7adff7997616d862dd0cd31ba6d69d558bc1e0cc5d293cae981a3762527377222bad00310e8b2308cf8b011b2abd7cd8be273f0
 DIST authlogic-3.1.3.gem 67584 SHA256 4399587eabff0b6ad197e71a2bccc44720aab5a65f8a0cb9538642f0cb6e1478 SHA512 d51a9322af5cb4fb60e963a653fee0c2024ae3d4e65fe4f91568f33af6a4ea5b4fe122b9aac158a8305ac9d1982a6edd0f14b82947b06fa0122fb6e7c36b43fa WHIRLPOOL 8cbeaa97d7319a40ddddd7dd283c0aa706f3abbb24216c098c6ad40a0c35b457a2218c01bc9091f516ec3b08fb0b99c533b02bf3f0b0c24930b17f94b8edcdaf
 DIST authlogic-3.2.0.gem 68096 SHA256 386aa1c5f0edad365ede6f819c98eb0bd948d1a277d450c3013f71887f8d2532 SHA512 a9c2354f5e69db9bdb6ad2ccd1622116f305607a7af31c7e5bf6ce986032150a7028229103a53923c5b8bcedc92bffff7ca79743de61e29612f829cacfc7acaa WHIRLPOOL bd9039554258e4d2ac7f4df7df2a9d45b7da9c6c544e794de0ec0c5edc8d888b2de0e9ba6bc8946b405cfe3352455151f0a039b214eed5d5142e5fe1e68c01f7
+DIST authlogic-3.3.0.gem 65536 SHA256 78271a3a6fc22320d174f9d642dcbb9ee6dfed5146d4aeaf5a050601b07ad46e SHA512 2316f311df153863ba5b8f4cc44017c2865409a539a800f2827a954b69ee22094da3895a70418b006799736c0166e58c1500400c2ab4c178a40b3f7bb512c592 WHIRLPOOL e2cbc7b85c89c20cf1ac6f2e5c06ca42141f7a9d59cf0951a66952e706495dde751ed800ed7b1bb5c0dc5b1da1eeebf0b935cf688498320b1123fd471297b582
