@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/authlogic
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 
+*authlogic-3.3.0 (09 May 2013)
+
+  09 May 2013; Hans de Graaff <graaff@gentoo.org> +authlogic-3.3.0.ebuild:
+  Version bump.
+
 *authlogic-3.2.0 (14 Feb 2013)
 
   14 Feb 2013; Hans de Graaff <graaff@gentoo.org> +authlogic-3.2.0.ebuild:
